version/0.16/_sources/api/solver/_autosummary/settings/phase_4.rst.txt
:orphan:

.. _phase_4:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_4.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_4>`


.. rubric:: Included in:

============================   ===============================

Parent                                                 Summary

============================   ===============================
:ref:`fan_child <fan_child>`       'child_object_type' of fan.

============================   ===============================

